@@ -28,10 +28,7 @@ tasks.withType<Test> {
     "-ea",
     "-Dio.netty.tryReflectionSetAccessible=true",
     "-Dio.netty.leakDetection.level=paranoid",
-    "-Djava.net.preferIPv4Stack=true",
-    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED"
+    "-Djava.net.preferIPv4Stack=true"
   )
 }
 
